removed updating stats for every guess because it was slow and also caused an error; added flag_imagine.js for not showing grid to choose from but just hiding and showing the correct flag;

--- a/utils/style.css
+++ b/utils/style.css
@@ -113,6 +113,7 @@ body {
   transform:translate(-50%, -50%);
   font-size:18px;
   text-align:center;
+  z-index: 1;
 }
 
 /* BUTTONS */
